--- a/web/html/src/branding/css/susemanager/components/buttons.scss
+++ b/web/html/src/branding/css/susemanager/components/buttons.scss
@@ -71,6 +71,7 @@ button.is-plain {
   &.disabled {
     border-color: transparent;
     text-decoration: none;
+    background: transparent;
 
     &,
     &:hover {
